--- a/css/profile.css
+++ b/css/profile.css
@@ -1,4 +1,7 @@
 /* We remove the margin, padding, and list style of UL and LI components */
+body {
+	background-color:#fff;
+}
 #sidebar ul, #sidebar ul li{
     margin:0;
     padding:0;
@@ -12,20 +15,22 @@
 	position: absolute;
 	top: 65px;
 	left:70;
+	bottom:0px;
 }
 #sidemenu{
 	background:#67737b;
     width:70px;
-    height:100%;
+    height: 100%;
 }
 #wrapper {
-	margin:20px 0 0 0;
+	margin:15px 0 0 0;
 	padding:0;
 	position: relative;
 	left:70px;
 	overflow: hidden;
 	float:left;
-	width: calc(100% - 75px);
+	width: calc(100% - 85px);
+	height:100%;
 }
 /* We apply background color and border bottom white and width to 150px */
 #sidebar ul li.item{
@@ -99,9 +104,6 @@
     -webkit-transition:color 0.3s ease;
     -moz-transition:color 0.3s ease;
 }
-#sidebar ul li.noflyover {
-	border:none;
-}
 
 #sidebar ul li a:hover:after {
     content: "  ";
@@ -131,6 +133,7 @@
 #sidebar .settings {
 	position: absolute;
 	bottom: 0;
+	margin:0;
 }
 	@media (max-height: 475px) {
 		#sidebar .settings{
@@ -138,15 +141,67 @@
 		}
 	}
 
-	/* Profile Body Styling */
-	.content-left {
-		padding-left: 20px;
-		background-color: #333;
-		color:#fff;
+/* Profile Body Styling */
+	.main-left {
+		background-color: #fff;
+		height:100%;
+		margin:0;
+		padding:0;
 	}
-
-	.content-right {
-		background-color:#999;
+	.main-right {
+		margin:0px;
+		padding:0px;
 	}
+		.profile-section{
+			padding:20px;
+			margin:0 0 20px 0;
+			height:100%;
+			width:100%;
+			background-color: #f8f8f8;
+			border: 1px solid #f1f1f1;
+		}
+		/* Text styling */
+		.profile-wrap {
+			margin: 0px;
+			padding: 0;
+		}
+		.profile-text {
 
+		}
+		.profile-info {
+			padding-left:20px;
+			margin:0;
+		}
+			/*Team section styling*/
+			.team-section {
+				width:100%;
+				margin: 0 0 10px 0;
+				float:left;
+				display: block;
+				clear: both;
+
+			}
+			.team-icon {
+				float:left;
+				width:20%;
+				border-radius: 5%;
+			}
+			.team-text {
+				text-transform: uppercase;
+				padding: 12px 0 0 10px;
+				float:left;
+			}
+			/*Achievements section styling */
+			.achievements-section {
+				display: block;
+				float:left;
+			}
+			.achievements-icon {
+				float:left;
+			}
+			.achievements-text {
+				float:left;
+				padding: 10px 0 0 10px;
+				text-transform: uppercase;
+			}
 	/* Profile body end */
